# sandsh

./: README.md  pyproject.toml  ruff.toml  sandsh.py
sandsh/: cli.py  config.py  sandbox.py  seccomp.py  toml.py  utils.py
